<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/roundedcorner_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dialog_default_msg"
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/line_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rechar_phonenum"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recharg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_01"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharg_money_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recharge_monery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_default_left_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcorner_left_btn"
            android:text="@string/chancel"
            android:textColor="@color/text_white"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="45dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/dialog_default_right_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcorner_right_btn"
            android:text="@string/sure"
            android:textColor="@color/text_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>