<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.asia.yongyou.yongyouagent.activity.PackageActivity">

    <include
        android:id="@+id/packge_header"
        layout="@layout/comm_header" />


    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_height"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:tabIndicatorColor="@color/bg_header_red"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/text_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_margin_8"
        android:background="@color/text_grey" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_height"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:id="@+id/to_product">

        <TextView
            android:id="@+id/addView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/comment_margin_8"
            android:text="@string/add_service"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/increment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/comment_margin_8"
            android:layout_toLeftOf="@+id/arrow_go"
            android:text="@string/none_order"
            android:textColor="@color/bg_header_red"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/arrow_go"
            android:layout_width="@dimen/comment_width_small"
            android:layout_height="@dimen/comment_height_small"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/comment_margin_8"
            android:scaleType="centerCrop"
            android:src="@mipmap/identification_next" />

    </RelativeLayout>

    <com.asia.yongyou.yongyouagent.widget.DisableButton
        android:id="@+id/idconfirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/comment_margin_8"
        android:background="@mipmap/button_disable"
        android:text="@string/identification_btn_text"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_large"
        app:disableResId="@mipmap/button_disable"
        app:pressedResId="@mipmap/button_down"
        app:resId="@mipmap/button_nor"/>

</LinearLayout>
